# Covex27

./: .env  .env.example  .env.production  .gitattributes  .gitignore  ABOUT.md  AUDIT_CIRCUITS_TIERS_SUGGESTIONS.md  AUDIT_REPORT_COMPREHENSIVE.md  CONTRIBUTING.md  COVEX_NECESSARY_LINKS.md  COVEX_SYSTEM_REPORT.md  Covex27  DEPLOY_TO_HIGHTABLE.sh  Design Improvement Prompt.txt  Dockerfile.backend  Dockerfile.frontend  HERMES_ANALYSIS_SYNC_AND_GAP_SCAN_PROMPT.md  HERMES_BEST_POSSIBLE_FINAL_VERSION_PROMPT.md  HERMES_CIRCUITS_FIX_ADD_TIER_POLISH_FINAL_PROMPT.md  HERMES_EXPLORER_GAME_PREVIEWS_PROMPT.md  HERMES_FINALIZE_BRANDING_PROMPT.md  HERMES_FINALIZE_PERFECT_WEBSITE_PROMPT.md  HERMES_FINAL_COMPLETE_REPORT.md  HERMES_FINAL_TRIPLE_CHECK_PROMPT.md  HERMES_FIX_TAG_OVERLAPS_SYNC_PROMPT.md  HERMES_FREE_FULLY_INTERACTABLE_CIRCUITS_100_PROMPT.md  HERMES_KASPA_SPECS_VISUALS_SYNC_PROMPT.md  HERMES_LIGHT_MODE_WHITE_DAG_PROMPT.md  HERMES_MASTER_3NET_COMPLETE_AND_FINAL_PROMPT.md  HERMES_MASTER_3NET_FINAL_100_PROMPT.md  HERMES_MASTER_3NET_FULL_PROMPT.md  HERMES_MASTER_3NET_POLISH_LOGO_UI_PROMPT.md  HERMES_MASTER_AUDIT_FIXES_AND_VISION_PROMPT.md  HERMES_MASTER_MAINNET_3NET_PROMPT.md  HERMES_MASTER_MAINNET_PRODUCTION_PROMPT.md  HERMES_MASTER_PROMPT.md  HERMES_MASTER_RULESET_ALL_THREE_PLACES.md  HERMES_MASTER_TN10_AND_MAINNET_PROMPT.md  HERMES_MASTER_TN10_DUAL_NETWORK_PROMPT.md  HERMES_MEGA_MASTER_ALL_FIXES_PROMPT.md  (+34 more)
.claude/: launch.json
.githooks/: pre-push
.github/: .gitattributes  dependabot.yml
backend/: Cargo.toml  api-shim.js  build.rs  package.json
backend/src/: broadcast.rs  channel.rs  compiler.rs  covenant_builder.rs  covenant_catalog.rs  covenant_types.rs  crawler.rs  db.rs  decompiler.rs  deploy_cli.rs  dev_wallets.rs  disassembler.rs  game_engine.rs  games.rs  indexer.rs  kaspa_msg.rs  live.rs  main.rs  mixer.rs  node_status.rs  oracle.rs  oracle_verifier.rs  payment_verifier.rs  poker.rs  referee.rs  referee_zk.rs  resolve.rs  resolver_failover.rs  signer.rs  ui_generator.rs  zk_prover_client.rs
deploy/: .env.production  apply_csp.py  backup-covex.sh  backup-offsite.sh.example  covex-alert.sh  covex-backend.service  covex-kaspad-watchdog.service  covex-kaspad-watchdog.timer  covex-launch-verify.sh  covex-monitor.service  covex-monitor.timer  covex-status.sh  deploy-hetzner.sh  deploy_all.sh  fe_deploy.sh  hard_deploy.sh  install-backup-system.sh  install-monitor.sh  kaspad-watchdog.sh  monitor-and-alert.sh  nginx-covex.conf  rate-limit-oracle.md  restore-drill-covex.sh  start-covex-backend.sh  start-mainnet-kaspad.sh  start-tn10-kaspad.sh  switch-to-mainnet.sh  validate-production.sh
docs/: AUDIT_TRUST_LEGAL_2026-06-15.md  BUILDING_ON_COVEX.md  COMPREHENSIVE_POST_PHASE18_EXECUTION_PLAN.md  CONNECTING_AN_ORACLE.md  COVEX_AUDIT_AND_IMPROVEMENT_PLAN_2026-06-12.md  COVEX_CONTINUATION_ROADMAP_2026-06-13.md  COVEX_MASTER_BUILD_PLAN.md  COVEX_STUDIO_INTEGRATION_VISION.md  CURRENT_STATE_AUDIT_AND_ROADMAP.md  DEORACLE_PLAN.md  ECOSYSTEM_VISION.md  EXECUTION_PLAN.md  FINAL_EXECUTION_PLAN_TO_100_PERCENT.md  FINAL_STATE_OF_COVEX.md  FULL_ENABLEMENT_PLAN.md  FUTURE_ROADMAP_PHASES_11_PLUS.md  GAMBLING_DEEMPHASIS_AND_COMPLIANCE.md  KIP10_DETERMINISTIC_COVENANTS_SPEC.md  LAUNCH_ANNOUNCEMENT_TEMPLATE.md  LAUNCH_AUDIT_HYGIENE_CHECKLIST.md  LAUNCH_CHECKLIST.md  LAUNCH_DAY_RUNBOOK.md  LONG_TERM_TECHNICAL_ROADMAP.md  LONG_TERM_VISION.md  MAINNET_COVENANT_EXAMPLES.md  MAINNET_GAMES.md  MAINNET_ONCHAIN_ZK.md  MAINNET_READINESS.md  MASTER_COMPLETION_PLAN.md  MASTER_EXECUTION_PLAN.md  MONITORING.md  NEXT_ZK_CIRCUITS.md  ONCHAIN_EVOLUTION_PATH.md  OPERATIONS_RUNBOOK.md  PHASE11_COVENANT_STUDIO_INTEGRATION.md  PHASE11_IMPLEMENTATION_TASKS.md  PHASE12_ZK_CIRCUIT_LIBRARY.md  PHASE13_EASY_UI_TEMPLATE_LIBRARY.md  PHASE14_ADVANCED_COVENANT_PRIMITIVES.md  PHASE15_MULTI_ORACLE_FEDERATION.md  (+19 more)
examples/: README.md
frontend/: _all14.mjs  _ge.mjs  _h4e2e.mjs  _verify_new.mjs  _verify_new_result.txt  _vn.mjs  _vn_result.txt  _zkv.mjs  eslint.config.js  index.html  kaspa-msg-fixture.mjs  package-lock.json  package.json  patch_n2.py  test-derivation.cjs  test-derive.mjs  vite.config.js
prover-service/: README.md  server.mjs
scripts/: check-forbidden-names.sh  check-no-emdash.sh  check-no-lucide-barrel.sh  check-no-payment-just-confirmed.sh  check-no-privacy-mixer.sh  check-zk-image-id.sh  check-zk-prove-gate.sh  check-zk-registry.sh  ci-local.sh  deploy-covenant.js  gen-satisfier-golden.mjs  generate_covex_health_report.sh
tools/: package.json  (+1 more)
zkvm/chess/: Cargo.toml  DESIGN.md  README.md  build_dev.sh  cli_gate.sh  prove_real.sh
zkvm/chess/cli/: Cargo.toml
zkvm/chess/cli/src/: main.rs
zkvm/chess/examples/: blackjack_player_win.json  chess_checkmate.json  chess_illegal.json
zkvm/chess/host/: Cargo.toml
zkvm/chess/host/src/: main.rs
zkvm/chess/methods/: Cargo.toml  build.rs
zkvm/chess/methods/guest/: Cargo.toml
zkvm/chess/methods/guest/.cargo/: config.toml
zkvm/chess/methods/guest/src/: main.rs
zkvm/chess/methods/src/: lib.rs
zkvm/compute/: Cargo.toml  DESIGN.md  README.md  build_dev.sh  cli_gate.sh  post_check.sh  prove_real.sh
zkvm/compute/cli/: Cargo.toml
zkvm/compute/cli/src/: main.rs
zkvm/compute/core/: Cargo.toml
zkvm/compute/core/src/: lib.rs
zkvm/compute/examples/: dot_product.json  hash_chain.json  quadratic.json  quadratic_wrong_output.json  threshold_predicate.json
zkvm/compute/host/: Cargo.toml
zkvm/compute/host/src/: main.rs
zkvm/compute/methods/: Cargo.toml  build.rs
zkvm/compute/methods/guest/: Cargo.toml
zkvm/compute/methods/guest/src/: main.rs
zkvm/compute/methods/src/: lib.rs
zkvm/games/: Cargo.toml
zkvm/games/src/: lib.rs
zkvm/games/src/games/: backgammon.rs  battleship.rs  blackjack.rs  checkers.rs  chess.rs  connect4.rs  dots_and_boxes.rs  mancala.rs  mod.rs  poker.rs  reversi.rs  tic_tac_toe.rs
zkvm/onchain/: Cargo.toml  prove_sample.sh
zkvm/onchain/samples/: README.md  control_inputs.hex  covex_stage4_consensus_test.rs  image_id.hex  journal.hex  manifest.json  proof.hex  public_inputs.hex
zkvm/onchain/src/: lib.rs
(+1016 files in other folders)
