[package]
name = "covex27-backend"
version = "0.1.0"
edition = "2021"
description = "Covex27 -- Kaspa covenant explorer backend"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
kaspa-wrpc-client = "0.15.0"
kaspa-rpc-core = "0.15.0"
kaspa-consensus-core = "0.15.0"
kaspa-addresses = "0.15.0"
workflow-core = "0.18.0"
wasm-bindgen = "=0.2.115"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
