[package]
name = "covex27-backend"
version = "1.0.0"
edition = "2021"
description = "Covex -- The Stateful Kaspa Covenant Indexer and SaaS Platform"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }
tower = { version = "0.4", features = ["limit", "util"] }
kaspa-wrpc-client = "0.15.0"
kaspa-rpc-core = "0.15.0"
kaspa-consensus-core = "0.15.0"
kaspa-addresses = "0.15.0"
kaspa-txscript = "0.15.0"
workflow-core = "0.18.0"
wasm-bindgen = "=0.2.115"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
blake2b_simd = "1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
workflow-serializer = "0.18.0"
secp256k1 = "0.29.1"

[patch.crates-io]
kaspa-consensus-core = { path = "vendor/kaspa-consensus-core" }
