# The RISC0 zkVM guest: reads a GuestInput (program witness + claimed program hash + public inputs
# + claimed output), runs covex_compute_core::run_checked, and commits the public Statement.
# Compiled to riscv32im-risc0-zkvm-elf by risc0-build. Any mismatch (wrong program hash, runtime
# trap, wrong claimed output) makes run_checked return Err; .expect() panics; the prover produces
# NO receipt (the honesty gate).
[package]
name = "compute-guest"
version = "0.1.0"
edition = "2021"

[workspace]
# Standalone workspace so the host workspace does not try to build this for the host target.

[[bin]]
name = "compute-guest"
path = "src/main.rs"

[dependencies]
# risc0 zkVM guest entry points (env::read / env::commit, sha2 accelerator). Default features pull
# in the std-flavored guest runtime (alloc + std) that covex-compute-core (Vec, String) needs.
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }
# The pure-Rust ISA + interpreter + the shared GuestInput / Statement contract types. Path dep so
# guest and host agree on the exact layout and the exact execution semantics. covex-compute-core
# pulls in sha2 + serde (with derive), which build for the guest target; the guest reads/commits
# those serde types directly, so no extra serde dep is needed here.
covex-compute-core = { path = "../../core" }

[profile.release]
# Smaller, faster guest cycle counts.
opt-level = 3
lto = "thin"
codegen-units = 1
